# translation-client

./: README.md  package-lock.json  package.json
src/: contribute.html  contribute.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: inference.rs
