[package]
name = "translation-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1"  }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", optional = true }
candle-onnx = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", optional = true }
anyhow = "1.0.75"
hf-hub = "0.3.2"
tokenizers = "0.15.0"
sysinfo = "0.29.11"
reqwest = { version = "0.11.22", features = ["stream"] }
futures-util = "0.3.29"
dirs = "5.0.1"
ring = "0.17.7"
urlencoding = "2.1.3"

[profile.dev.package."*"]
opt-level = 3

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
